<resources>
    <string name="app_name">Appointment Book</string>
    <string name="nome">Nome:</string>
    <string name="autorlbl">Autor:</string>

    <string name="nomeText">Nome</string>
    <string name="autorText">Autor</string>

    <string name="salvar">Salvar</string>

    <string name="login">Login</string>
    <string name="senha">Senha</string>

    <string name="logar">Entrar</string>



    <string name="title_activity_template_teste">TemplateTeste</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
