<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.arthur.crudsimplesandroid.controller.LoginActivityMain">

    <include  layout="@layout/nav_header_template_teste"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/senha_margin"
            android:layout_marginRight="@dimen/senha_margin"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="@dimen/senha_margin"
            android:layout_marginRight="@dimen/senha_margin"
            android:hint="@string/senha" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logar"
            android:textColor="@drawable/btn_text_color"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/mybutton"/>
    </LinearLayout>


</LinearLayout>
